Added a couple of TODOs.

--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ Allow searching over the heap.  In variables view window, should be able to sear
 Instead of generating, evaluating, then showing to the user, we could generate, show the user, and then evaluate.  This would let us explore a much larger space (since we don't have to evaluate it) and the user could tell us which expressions he likes.  We could cluster them so he has fewer choices.  We could estimate the strength of the pdspec and use that to guess how many expression will satisfy it.
 We should allow users to easily make demonstrations for new variables (currently you need the variable to exist so you can right-click it in the variables window, so you must make a fake assignment to it).  
 We should allow demonstrating generic statements using our new prime syntax.  This will allow us to call void methods and talk about side effects.
-We should allow demonstrating expressions, not just statements (e.g., "if (choose(...))").
+We should allow demonstrating expressions, not just statements (e.g., "if (choose(...))").  JDIDebugModel.createMethodEntryBreakpoint (see references for createMethodBreakpoint) can set a breakpoint when the choose() method is called, and IJavaStackFrame.forceReturn can pop us out of a stack frame.
 We should synthesize choose expressions when the LHS is an array access.  Currently, we do "a[1] = choose(...)", but we should do "a[choose(...)] = choose(...)".  Should we do this for field accesses too?  There at least the current path is legal and unambiguous.
 We should add casts to our language of expressions.  Without them, we might generate illegal code (e.g., by calling a method that is not available on the static type).  Note that this can presumably be used to fix the "illegal LHS" bug above.
 Support anonymous classes better.  We currently cannot refer to variables in the outer scope or ContainingClass.this.
