--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ Support auto-complete and error-highlighting in the dialog box when demonstratin
 Improve the candidate selector dialog.  You should be able to browse values like in the variables view, and hovering over a method should show its Javadoc.  It should also have two real columns.
 Allow searching over the heap.  In variables view window, should be able to search values, types, names for a string.  Leo's idea.
 Instead of generating, evaluating, then showing to the user, we could generate, show the user, and then evaluate.  This would let us explore a much larger space (since we don't have to evaluate it) and the user could tell us which expressions he likes.  We could cluster them so he has fewer choices.  We could estimate the strength of the pdspec and use that to guess how many expression will satisfy it.
-We should allow users to easily make demonstrations for new variables (currently you need the variable to exist so you can right-click it in the variables window, so you must make a fake assignment to it).  
+We should allow users to easily make demonstrations for new variables (currently you need the variable to exist so you can right-click it in the variables window, so you must make a fake assignment to it).  See the JDIPlaceholderVariable class, which can be constructed easily.  
 We should allow demonstrating generic statements using our new prime syntax.  This will allow us to call void methods and talk about side effects.
 We should allow demonstrating expressions, not just statements (e.g., "if (choose(...))").  JDIDebugModel.createMethodEntryBreakpoint (see references for createMethodBreakpoint) can set a breakpoint when the choose() method is called, and IJavaStackFrame.forceReturn can pop us out of a stack frame.
 We should synthesize choose expressions when the LHS is an array access.  Currently, we do "a[1] = choose(...)", but we should do "a[choose(...)] = choose(...)".  Should we do this for field accesses too?  There at least the current path is legal and unambiguous.
