--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ We should add casts to our language of expressions.  Without them, we might gene
 Support anonymous classes better.  We currently cannot refer to variables in the outer scope or ContainingClass.this.
 We can use annotations to inform the expression generator.  @NotNull can tell it not to pass anything known to be null (and add non null as a precondition during evaluation).  @DoNotExplore could tell it not to try calling a specific method.  We could even allow custom annotations with expressions if Java allows them.  We could use this for things in the Java standard library.  We could infer these by parsing the Javadoc.
 We should let users directly control what sort of expressions are searched (e.g., methods, constructors).  This can make the search faster and give the user fewer possible expressions.  Users should also be able to select which variables are involved in the expression.  One way to do it is to have checkboxes below the textbox.  Or you could right-click on the variable in the variables view and say "use this".  A regex-like language is another possibility.
-We need to be able to dynamically load classes in the user's code.  This can come up when searching methods/fields of objects (we get those with types that have not been loaded) and when scanning imports (classes imported but not used are not loaded).  Currently, this means we do not explore many possibilities.
+We need to be able to dynamically load classes in the user's code.  This can come up when searching methods/fields of objects (we get those with types that have not been loaded) and when scanning imports (classes imported but not used are not loaded).  Currently, this means we do not explore many possibilities.  At worst, we can hopefully do this by executing code that does "Type.class" or something.
 Give the user a dropdown thing that lets them re-use their recently-entered properties.
 Allow undoing when demonstrating values/properties.
 Suggest corrections: if the user types "x instanceof String[]" say 'Did you mean, "x instanceof Collection<String>">' (see Wontae's RW.3).
@@ -50,6 +50,7 @@ Optimizations
 -------------
 Begin expression generation when the user clicks demonstration, i.e., when we open the text box.  This way we can do the work while they're typing.
 If multiple expressions have the same value, only generate with one and then replace later.
+Store evaluated expressions into permanent memory so we can recover them after a crash.  We'll then never need to re-execute anything!  But making new variables seems hard.  We could use some field in CodeHint, but that's ugly and we might need to load it dynamically.
 Investigate using IClassFileEvaluationEngine instead of ASTEvaluation.  See JavaSnippetEditor.evaluate().
 Optimize evaluation string: when given a property with a type (x: Foo => ...) don't insert the casts if the variable has static type Foo.
 
