--- a/TODO
+++ b/TODO
@@ -7,13 +7,13 @@ Improve the candidate selector dialog.  You should be able to browse values like
 Allow searching over the heap.  In variables view window, should be able to search values, types, names for a string.  Leo's idea.
 Instead of generating, evaluating, then showing to the user, we could generate, show the user, and then evaluate.  This would let us explore a much larger space (since we don't have to evaluate it) and the user could tell us which expressions he likes.  We could cluster them so he has fewer choices.  We could estimate the strength of the pdspec and use that to guess how many expression will satisfy it.
 We should allow users to easily make demonstrations for new variables (currently you need the variable to exist so you can right-click it in the variables window, so you must make a fake assignment to it).  See the JDIPlaceholderVariable class, which can be constructed easily.  
-We should allow demonstrating generic statements using our new prime syntax.  This will allow us to call void methods and talk about side effects.
-We should allow demonstrating expressions, not just statements (e.g., "if (choose(...))").  JDIDebugModel.createMethodEntryBreakpoint (see references for createMethodBreakpoint) can set a breakpoint when the choose() method is called, and IJavaStackFrame.forceReturn can pop us out of a stack frame.
+We should allow demonstrating statements (not just expressions) using our new prime syntax.  This will allow us to call void methods and talk about side effects.
+We should allow demonstrating subexpressions (e.g., "if (choose(...))").  JDIDebugModel.createMethodEntryBreakpoint (see references for createMethodBreakpoint) can set a breakpoint when the choose() method is called, and IJavaStackFrame.forceReturn can pop us out of a stack frame.
 We should synthesize choose expressions when the LHS is an array access.  Currently, we do "a[1] = choose(...)", but we should do "a[choose(...)] = choose(...)".  Should we do this for field accesses too?  There at least the current path is legal and unambiguous.
 We should add casts to our language of expressions.  Without them, we might generate illegal code (e.g., by calling a method that is not available on the static type).  Note that this can presumably be used to fix the "illegal LHS" bug above.
 Support anonymous classes better.  We currently cannot refer to variables in the outer scope or ContainingClass.this.
 We can use annotations to inform the expression generator.  @NotNull can tell it not to pass anything known to be null (and add non null as a precondition during evaluation).  @DoNotExplore could tell it not to try calling a specific method.  We could even allow custom annotations with expressions if Java allows them.  We could use this for things in the Java standard library.  We could infer these by parsing the Javadoc.
-We should let users directly control what sort of expressions are searched (e.g., methods, constructors).  This can make the search faster and give the user fewer possible expressions.  Users should also be able to select which variables are involved in the expression.  One way to do it is to have checkboxes below the textbox.  Or you could right-click on the variable in the variables view and say "use this".  A regex-like language is another possibility.
+Improve skeleton language.  Allow things like "a method with any number of arguments" or "a hole not using the variable x".
 We need to be able to dynamically load classes in the user's code.  This can come up when searching methods/fields of objects (we get those with types that have not been loaded) and when scanning imports (classes imported but not used are not loaded).  Currently, this means we do not explore many possibilities.  At worst, we can hopefully do this by executing code that does "Type.class" or something.
 Give the user a dropdown thing that lets them re-use their recently-entered properties.
 Allow undoing when demonstrating values/properties.
@@ -48,6 +48,7 @@ Don't allow assigning to the this variable.
 
 Optimizations
 -------------
+Improve skeleton code so that it only generates valid skeletons and hence can skip having to parse the results to ensure they typecheck. 
 Begin expression generation when the user clicks demonstration, i.e., when we open the text box.  This way we can do the work while they're typing.
 If multiple expressions have the same value, only generate with one and then replace later.
 Store evaluated expressions into permanent memory so we can recover them after a crash.  We'll then never need to re-execute anything!  But making new variables seems hard.  We could use some field in CodeHint, but that's ugly and we might need to load it dynamically.
