Show candidate expressions as we get them.

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ Feature requests
 When users write a pdspec in the code, make it easier to start the synthesis.  We could set the breakpoint and start the debugger automatically when the user does something (e.g., right-click menu).
 Make it easier to write pdspecs in the code.  It would be great if we could use auto-complete to make them easier to type, but Eclipse doesn't seem to let us do that.  I did make a Quick Fix, although it doesn't open on hover....
 Support auto-complete and error-highlighting in the dialog box when demonstrating.  See e.g. ChangeVariableValueInputDialog and ExpressionInputDialog.
-Improve the candidate selector dialog.  You should be able to browse values like in the variables view, and hovering over a method should show its Javadoc.  It should also have two real columns.
+Improve the candidate selector dialog.  You should be able to browse values like in the variables view, hovering over a method should show its Javadoc, and hovering over a value should show the debug hover (like the variables view).  
 Allow searching over the heap.  In variables view window, should be able to search values, types, names for a string.  Leo's idea.
 Instead of generating, evaluating, then showing to the user, we could generate, show the user, and then evaluate.  This would let us explore a much larger space (since we don't have to evaluate it) and the user could tell us which expressions he likes.  We could cluster them so he has fewer choices.  We could estimate the strength of the pdspec and use that to guess how many expression will satisfy it.
 We should allow users to easily make demonstrations for new variables (currently you need the variable to exist so you can right-click it in the variables window, so you must make a fake assignment to it).  See the JDIPlaceholderVariable class, which can be constructed easily.  
@@ -13,7 +13,7 @@ We should synthesize choose expressions when the LHS is an array access.  Curren
 We should add casts to our language of expressions.  Without them, we might generate illegal code (e.g., by calling a method that is not available on the static type).  Note that this can presumably be used to fix the "illegal LHS" bug above.
 Support anonymous classes better.  We currently cannot refer to variables in the outer scope or ContainingClass.this.
 We can use annotations to inform the expression generator.  @NotNull can tell it not to pass anything known to be null (and add non null as a precondition during evaluation).  @DoNotExplore could tell it not to try calling a specific method.  We could even allow custom annotations with expressions if Java allows them.  We could use this for things in the Java standard library.  We could infer these by parsing the Javadoc.
-Improve skeleton language.  Allow things like "a method with any number of arguments" or "a hole not using the variable x".
+Improve skeleton language.  Allow things like "a hole not using the variable x".
 Give the user a dropdown thing that lets them re-use their recently-entered properties.
 Allow undoing when demonstrating values/properties.
 Suggest corrections: if the user types "x instanceof String[]" say 'Did you mean, "x instanceof Collection<String>">' (see Wontae's RW.3).
